--- a/Debug/makefile
+++ b/Debug/makefile
@@ -15,6 +15,7 @@ RM := rm -rf
 -include Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/subdir.mk
 -include Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
+-include Core/Src/sensors/subdir.mk
 -include Core/Src/screens/subdir.mk
 -include Core/Src/subdir.mk
 -include subdir.mk
