--- a/Debug/makefile
+++ b/Debug/makefile
@@ -16,7 +16,8 @@ RM := rm -rf
 -include Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
 -include Core/Src/sensors/subdir.mk
--include Core/Src/screens/subdir.mk
+-include Core/Src/screens/oled/subdir.mk
+-include Core/Src/screens/lcd/subdir.mk
 -include Core/Src/subdir.mk
 -include subdir.mk
 -include objects.mk
